syntax = "proto3";

package kessel.inventory.v1beta2;

import "buf/validate/validate.proto";
import "kessel/inventory/v1beta2/resource_reference.proto";
import "kessel/inventory/v1beta2/subject_reference.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

message CheckForUpdateRequest {
  ResourceReference object = 1 [(buf.validate.field).required = true];
  string relation = 2 [(buf.validate.field).string.min_len = 1];
  SubjectReference subject = 3 [(buf.validate.field).required = true];
}
